--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ header {
 </div>
 
 <script>
-const PROXY = "http://129.159.155.172:5050";
+const PROXY = "https://immediate-gauge-sullivan-has.trycloudflare.com";
 
 const COLORS = {
   empty:    { bg: "#22c55e", glow: "rgba(34,197,94,0.55)",   border: "rgba(34,197,94,0.4)"   },
